--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "animate.css": "^4.1.1",
     "gsap": "^3.11.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
